k8s/ingress/lb-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ls-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - finarsi-rsoi.site
        - library.finarsi-rsoi.site
        - rating.finarsi-rsoi.site
        - rental.finarsi-rsoi.site
      secretName: letsencrypt
  rules:
    - host: finarsi-rsoi.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
    - host: library.finarsi-rsoi.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: library
                port:
                  number: 8060
    - host: rating.finarsi-rsoi.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rating
                port:
                  number: 8050
    - host: rental.finarsi-rsoi.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rental
                port:
                  number: 8070
