k8s/ingress/lb-library.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linrary-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - library.finarsi-rsoi.site
      secretName: letsencrypt
  rules:
    - host: library.finarsi-rsoi.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: library
                port:
                  number: 8060
