k8s/ingress/lb-rating.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rating-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - rating.finarsi-rsoi.site
      secretName: letsencrypt
  rules:
    - host: rating.finarsi-rsoi.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rating
                port:
                  number: 8050
