k8s/ingress/lb-rental.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rental
  annotations:
    dev.okteto.com/generate-host: "true"
#    kubernetes.io/ingress.class: "nginx"
#    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
#  tls:
#    - hosts:
#        - rental.finarsi-rsoi.site
#      secretName: letsencrypt
  ingressClassName: nginx
  rules:
#    - host: rental.finarsi-rsoi.site
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rental
                port:
                  number: 8070
